# langchain-bigquery-hybridsearch

./: .gitignore  LICENSE  README.md  hybrid-search-implementation-plan.md  langchain-bq-hybridsearch-implementation-plan.md  pyproject.toml
example/notebooks/: bigquery_hybridsearch_demo.ipynb
src/langchain_bigquery_hybridsearch/: __init__.py  vectorstore.py
tests/: .env.example  conftest.py
tests/integration_tests/: test_hybridsearch.py
tests/unit_tests/: test_sql_generation.py  test_task_type.py
